# qwen-api

./: .env.example  .gitignore  04_setup_project.sh  05_download_model.sh  06_convert_to_gguf.sh  07_setup_remote_desktop.sh  API_KEY.md  ASR_TTS.md  CHANGELOG.md  CLAUDE.md  HOW1.md  HOW2.md  README.md  SCRIPTS.md  download_qwen.sh  download_qwen35.sh  download_qwen3_coder.sh  fetch_proxy.py  fix_xrdp.sh  llm_manager.py  main.py  pyproject.toml  qwen3_asr.sh  qwen3_tts.sh  release_vram.sh  setup_disable_sleep.sh  setup_tw_mirror.sh  start.sh  start_asr.sh  start_llm_manager.sh  start_openclaw.sh  start_openclaw_fast.sh  start_openclaw_nothink.sh  start_tts.sh  tmux.md  tts_api.py
asr/: asr_api.py  asr_api_vllm.py  qwen3_asr.sh
frontend/: index.html  serve.sh  start_frontend.bat
frontend/css/: style.css
frontend/js/: chat.js  health.js  i18n.js  render.js  settings.js  tools.js  webfetch.js
linux/: 01_install_nvidia_driver.sh  02_install_cuda.sh  03_install_python.sh  04_setup_project.sh  04b_build_llama_cpp.sh  build_essential.sh
qwen3/: start_openclaw_fast.sh  start_openclaw_nothink.sh
qwen35/: 05_download_model.sh  06_convert_to_gguf.sh  download_qwen35.sh
qwen3asr/: ASR_API.md  asr_api.py  asr_benchmark.py  asr_benchmark.sh  asr_manager.py  qwen3_asr.sh  start_asr.sh  start_asr_manager.sh  start_asr_vllm.sh
qwen3coder/: download_qwen3_coder.sh  start_openclaw.sh
qwen3tts/: TTS_API.md  install_flash_attn.sh  qwen3_tts.sh  start_tts_manager.sh  start_tts_vllm.sh  tts_manager.py
tts/: start_tts.sh  tts_api_vllm.py
